cluster/config/vulnerabilitytracer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulnerabilitytracer
  labels:
    istio-injection: enabled
