cluster/config/vulnerabilitytracer/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vulnerabilitytracer-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*.vulnerabilitytracer.localhost"
    - port:
        number: 25432
        name: postgres
        protocol: TCP
      hosts:
        - "*"
