cluster/config/vulnerabilitytracer/postgres.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vulnerabilitytracer-db
spec:
  gateways:
    - vulnerabilitytracer-gateway
  hosts:
    - 'db.vulnerabilitytracer.localhost'
  tcp:
    - match:
        - port: 25432
      route:
        - destination:
            host: vulnerabilitytracer-db-rw.vulnerabilitytracer.svc.cluster.local
            port:
              number: 5432
